syntax = "proto3";
package dydxprotocol.prices;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dydxprotocol/v4/x/prices/types";

// Msg defines the Msg service.
service Msg {
  // UpdateMarketPrices updates the oracle price of a market relative to
  // quoteCurrency.
  rpc UpdateMarketPrices(MsgUpdateMarketPrices)
      returns (MsgUpdateMarketPricesResponse);
}

// MsgUpdateMarketPrices is a request type for the UpdateMarketPrices method.
message MsgUpdateMarketPrices {
  // MarketPrice represents a price update for a single market
  message MarketPrice {
    // The id of market to update
    uint32 market_id = 1;
    // The updated price
    uint64 price = 2;
  }

  string proposer = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated MarketPrice market_price_updates = 2;
}

// MsgUpdateMarketPricesResponse defines the MsgUpdateMarketPrices response
// type.
message MsgUpdateMarketPricesResponse {}
